# boundaries

./: .gitignore  .pre-commit-config.yaml  README.md  package-lock.json
.github/: dependabot.yml
.github/workflows/: deploy-demo.yaml  deploy-pipeline.yaml  lint.yaml  ty.yaml
dag/: configuration.yaml  dag.py
demo/: .editorconfig  package-lock.json  package.json  svelte.config.js  vite.config.js
demo/src/: app.html
demo/src/lib/: App.svelte  Sidebar.svelte  site.json
demo/src/routes/: +layout.ts  +page.svelte
hooks/: check_config.py  check_configuration_task_names.py  check_configuration_yaml.py  check_dag_name.py  check_task_names.py
scripts/: deploy_pipeline.py  pyproject.toml  update-readme.py
tasks/fetch_geometry/: Dockerfile  main.py  pyproject.toml
tasks/fetch_geometry/src/: main.py  process_geometry.py
tasks/make_boundaries/: Dockerfile  label_subs.qgz  label_substitutions.geojson  pyproject.toml  versatiles.yaml
tasks/make_boundaries/exploration/: bounds.ipynb  country_snapping.ipynb  labels.ipynb
tasks/make_boundaries/src/: fetch_geometry.py  globals.py  main.py  make_versatiles.py  process_geometry.py  upload_blob.py
tasks/make_boundaries/src/entities/: Tileset.py
tasks/make_boundaries/src/usecases/: fetch_bkg_years.py  fetch_existing.py  fetch_unless_cached.py  make_admin.py  make_admin_labels.py  make_versatiles.py
