[project]
name = "make_boundaries"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "geopandas>=1.1.2",
    "google-cloud-storage>=3.9.0",
    "ipykernel>=7.3.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "requests>=2.34.2",
    "shapely>=2.1.2",
    "tqdm>=4.68.2",
    "typed-argument-parser>=1.12.0",
]
